# Sisyphus-api-engine

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  pypi_publish.sh  pyproject.toml  pyrightconfig.json  run_all_examples.sh  test_results.txt  任务清单.md  重构任务清单.md
.claude/commands/: README.md  push.md  refactor.md  test.md  update.md
.claude/skills/: git-commit.md
.cursor/commands/: sisyphus-api-engine.md
.sisyphus/: config.yaml  config.yaml.template
allure-results/: 8c0d4180-fa17-4a6a-908b-bdcd9a14d2ae-result.json  categories.json  environment.properties
apirun/: __init__.py  cli.py  cli_help_i18n.py  errors.py  keyword.py
apirun/config/: __init__.py
apirun/core/: __init__.py  condition_evaluator.py  dependency_analyzer.py  global_config_manager.py  models.py  retry.py  runner.py  template_functions.py  variable_manager.py
apirun/data_driven/: __init__.py  data_source.py  driver.py  iterator.py
apirun/executor/: __init__.py  api_executor.py  concurrent_executor.py  custom.py  database_executor.py  db.py  loop_executor.py  poll_executor.py  request.py  script_executor.py  step_executor.py  test_case_executor.py  wait_executor.py
apirun/extractor/: __init__.py  cookie_extractor.py  extractor.py  extractor_factory.py  header_extractor.py  jsonpath_extractor.py  regex_extractor.py
apirun/mock/: __init__.py  models.py  server.py
apirun/parser/: __init__.py  csv_parser.py  v2_yaml_parser.py  yaml_parser.py
apirun/result/: __init__.py  allure_collector.py  allure_exporter.py  allure_reporter.py  collector.py  html_exporter.py  html_reporter.py  json_exporter.py  json_reporter.py  junit_exporter.py  log_collector.py  models.py  text_reporter.py
apirun/security/: __init__.py  log_sanitizer.py  regex_validator.py  size_limiter.py  sql_validator.py
apirun/utils/: __init__.py  console_output.py  enhanced_jsonpath.py  error_utils.py  functions.py  hooks.py  json_optimized.py  logger.py  minio_client.py  performance.py  retry.py  template.py  timeout.py  variable_pool.py  variables.py  yaml_loader.py
apirun/validation/: __init__.py  comparators.py  engine.py  validator.py
apirun/validator/: __init__.py  yaml_validator.py
apirun/websocket/: __init__.py  broadcaster.py  events.py  notifier.py  progress.py  publisher.py  server.py
config/: global_config.yaml
docs/: 00_快速入门.md  00_项目重构学习大纲与任务清单.md  01_HTTP请求.md  01_核心数据模型.md  01_第一阶段_核心数据模型.md  02_变量系统.md  02_第二阶段_配置管理.md  03_第三阶段_变量系统.md  03_验证断言.md  04_提取器.md  04_第四阶段_解析器.md  05_环境配置.md  05_第五阶段_执行器基础.md  06_流程控制.md  06_第六阶段_HTTP请求执行.md  07_第七阶段_验证系统.md  07_重试与等待.md  08_循环控制.md  08_第八阶段_变量提取.md  09_并发执行.md  09_第九阶段_步骤执行类型.md  10_数据驱动.md  10_第十阶段_测试用例执行.md  11_第十一阶段_数据驱动测试.md  11_脚本执行.md  12_数据库操作.md  12_第十二阶段_结果收集和输出.md  13_Mock服务器.md  13_第十三阶段_实用工具.md  14_WebSocket.md  14_第十四阶段_命令行接口.md  15_性能测试.md  16_最佳实践.md  17_架构重构与目录规范.md  API-Engine输入协议规范.md  API-Engine输出协议规范.md  RoadMap.md  Sisyphus-api-engine JSON 输出规范.md  Sisyphus-api-engine YAML 输入规范.md  Sisyphus-api-engine需求文档.md  (+11 more)
examples/: 00_最佳实践.yaml  01_simple_get.yaml  02_HTTP请求测试.yaml  02_get_with_query.yaml  03_post_json.yaml  03_变量基础语法.yaml  03_完整流程测试.yaml  04_数据库操作.yaml  06_等待和循环.yaml  07_使用全局配置.yaml  07_数据驱动测试.yaml  07_高级断言验证.yaml  08_并发测试.yaml  08_输出格式配置.yaml  08_重试机制演示.py  09_变量提取器.yaml  09_性能测试.yaml  10a_JSONPath函数演示.yaml  11_JSONPath函数演示.yaml  11_等待机制.yaml  13_CSV导出示例.yaml  14_Allure报告格式.yaml  14_等待机制.yaml  15_JUnit和HTML报告格式.yaml  15_数据库操作.yaml  16_变量语法测试.yaml  16_自定义函数测试.yaml  17_平台化配置示例.yaml  17_数据驱动测试.yaml  19_Mock服务器测试.yaml  19_完整流程测试.yaml  19_简单函数测试.yaml  20_Mock服务器测试.yaml  20_动态数据示例.yaml  25_JSONPath高级功能演示.yaml  25_字符串验证器.yaml  26_增强功能测试.yaml  27_已发现功能验证.yaml  28_多值提取功能.yaml  29_条件提取简化版.yaml  (+17 more)
examples/data/: test_users.json
examples/demo_script/: mock_server_demo.py  等待循环演示.py
examples/yaml/: 00_快速入门.yaml  01_HTTP请求.yaml  02_变量系统.yaml  03_验证断言.yaml  04_提取器.yaml  05_环境配置.yaml  06_流程控制.yaml  07_重试与等待.yaml  08_循环控制.yaml  09_并发执行.yaml  10_数据驱动.yaml  11_脚本执行.yaml  12_数据库操作.yaml  13_Mock服务器.yaml  14_WebSocket.yaml  15_性能测试.yaml  16_最佳实践.yaml
examples_bak/: JSON输出格式配置.yaml  Mock服务器测试.yaml  WebSocket实时推送.yaml  完整流程测试.yaml  步骤控制.yaml  脚本执行.yaml
examples_bak/demo_script/: websocket_client_demo.py
scripts/: test_script.py
testcases/scenariotest/: __regex验证器测试.yaml  __验证器修复测试.yaml
tests/: conftest.py  mock_server.py  run_all_yaml_tests.py  test_bugfixes.py  test_collector.py
tests/core/: test_condition_evaluator.py  test_dependency_analyzer.py  test_models.py  test_retry.py  test_template_functions.py  test_variable_manager.py  test_variable_manager_enhanced.py
tests/executor/: test_api_executor.py  test_concurrent_executor.py  test_database_executor.py  test_loop_executor.py  test_poll_executor.py  test_script_executor.py  test_step_executor.py  test_test_case_executor.py  test_wait_executor.py
tests/exporters/: test_exporters.py
tests/extractor/: __init__.py  test_extractors.py
tests/integration/: test_end_to_end.py
tests/mock/: __init__.py  test_models.py  test_server.py
tests/parser/: test_nested_variable_reference.py  test_v2_yaml_parser.py
tests/performance/: benchmark.py  test_benchmarks.py
tests/result/: test_exporters.py  test_json_exporter.py
tests/unit/: conftest.py  test_cli.py  test_comparators.py  test_config.py  test_csv_parser.py  test_data_driven.py  test_db_executor.py  test_errors.py  test_executor_custom.py  test_extractor.py  test_models.py  test_output_models.py  test_regex_security.py  test_request_executor.py  test_retry.py  test_runner.py  test_runner_integration.py  test_sql_security.py  test_text_reporter.py  test_thread_safety.py  test_timeout.py  test_validator.py  test_variable_pool.py  test_variables.py  test_websocket_publisher.py  test_websocket_publisher_enhanced.py  test_yaml_cases.py  test_yaml_parser.py
tests/utils/: test_console_output.py  test_enhanced_jsonpath.py  test_error_utils.py  test_logger.py
问题跟踪文档/: Sisyphus功能改进建议.md  任务清单.md  功能实现-变量嵌套引用.md  功能实现-异步轮询机制.md  功能实现总览.md  完整功能实现与自测报告.md  框架改进任务清单.md
(+14 files in other folders)
