[project]
name = "sisyphus-api-engine"
version = "0.1.0"
description = "Sisyphus-X 接口自动化核心执行器 - YAML 驱动的 API 测试引擎"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "jsonpath-ng>=1.6.0",
    "rich>=13.0.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.0",
    "allure-pytest>=2.13.0",
    "pytest>=8.0.0",
]

[project.scripts]
sisyphus = "apirun.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pyright>=1.1.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apirun"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apirun"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apirun"]

[tool.pyright]
include = ["apirun"]
typeCheckingMode = "basic"
pythonVersion = "3.12"
reportMissingImports = "warning"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "-ra"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
