[project]
name = "sisyphus-api-engine"
version = "2.2.2"
description = "Sisyphus-X 接口自动化核心执行器 - YAML 驱动的 API 测试引擎"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "click>=8.1.0",
    "PyYAML>=6.0.2",
    "pyyaml-include>=1.3",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "jsonpath-ng>=1.6.0",
    "rich>=13.9.0",
    "PyMySQL>=1.1.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
sisyphus-api-engine = "apirun.cli:main"
sisyphus = "apirun.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=5.0.0",
    "pre-commit>=4.0.0",
]
publish = [
    "twine>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apirun"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apirun"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apirun"]

[tool.pyright]
include = ["apirun"]
typeCheckingMode = "basic"
pythonVersion = "3.12"
reportMissingImports = "warning"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "-ra"]
# 并发测试配置（可选）:
# 使用 -nauto 自动使用所有 CPU 核心
# 使用 -n4 指定 4 个 worker
# 示例: uv run pytest -nauto tests/unit
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
